--- a/src/main/resources/view/StartPage.fxml
+++ b/src/main/resources/view/StartPage.fxml
@@ -7,19 +7,25 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.paint.LinearGradient?>
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lifehouse.raceth.gui.Switch_Controller">
+<AnchorPane fx:id="main" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lifehouse.raceth.gui.Switch_Controller">
    <children>
-      <AnchorPane layoutY="125.0" prefHeight="595.0" prefWidth="212.0" style="-fx-background-color: white;">
+      <AnchorPane fx:id="left_pane" layoutY="125.0" prefHeight="595.0" prefWidth="212.0" style="-fx-background-color: white;">
          <children>
-            <Button fx:id="sorevButt" alignment="CENTER" contentDisplay="TOP" graphicTextGap="8.0" layoutX="51.0" layoutY="42.0" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="74.0" prefWidth="161.0" style="-fx-border-color: white; -fx-background-color: white;" text="Соревнование     " wrapText="true">
+            <Button fx:id="sorevButt" alignment="CENTER" contentDisplay="TOP" graphicTextGap="8.0" layoutX="51.0" layoutY="42.0" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="65.0" prefWidth="160.0" style="-fx-border-color: white; -fx-background-color: white;" text="Соревнование     " wrapText="true">
                <font>
                   <Font name="Calibri" size="18.0" />
                </font>
@@ -30,7 +36,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button fx:id="zabegButt" alignment="CENTER" contentDisplay="TOP" graphicTextGap="8.0" layoutX="51.0" layoutY="116.0" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="74.0" prefWidth="161.0" style="-fx-border-color: white; -fx-background-color: white;" text="Забег                      " wrapText="true">
+            <Button fx:id="zabegButt" alignment="CENTER" contentDisplay="TOP" graphicTextGap="8.0" layoutX="51.0" layoutY="116.0" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="65.0" prefWidth="160.0" style="-fx-border-color: white; -fx-background-color: white;" text="Забег                      " wrapText="true">
                <font>
                   <Font name="Calibri" size="18.0" />
                </font>
@@ -41,7 +47,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button fx:id="esta" alignment="CENTER" contentDisplay="TOP" graphicTextGap="8.0" layoutX="51.0" layoutY="190.0" mnemonicParsing="false" onAction="#handleButtonAction2" prefHeight="74.0" prefWidth="161.0" style="-fx-border-color: white; -fx-background-color: white;" text="Эстафета                " wrapText="true">
+            <Button fx:id="esta" alignment="CENTER" contentDisplay="TOP" graphicTextGap="8.0" layoutX="51.0" layoutY="190.0" mnemonicParsing="false" onAction="#handleButtonAction2" prefHeight="65.0" prefWidth="160.0" style="-fx-border-color: white; -fx-background-color: white;" text="Эстафета                " wrapText="true">
                <font>
                   <Font name="Calibri" size="18.0" />
                </font>
@@ -52,7 +58,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button alignment="CENTER" contentDisplay="TOP" graphicTextGap="8.0" layoutX="51.0" layoutY="264.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="161.0" style="-fx-border-color: white; -fx-background-color: white;" text="Монитор отметок" wrapText="true">
+            <Button alignment="CENTER" contentDisplay="TOP" graphicTextGap="8.0" layoutX="51.0" layoutY="264.0" mnemonicParsing="false" prefHeight="65.0" prefWidth="160.0" style="-fx-border-color: white; -fx-background-color: white;" text="Монитор отметок" textOverrun="LEADING_ELLIPSIS" wrapText="true">
                <font>
                   <Font name="Calibri" size="18.0" />
                </font>
@@ -60,7 +66,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button alignment="CENTER" contentDisplay="TOP" graphicTextGap="8.0" layoutX="51.0" layoutY="338.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="161.0" style="-fx-border-color: white; -fx-background-color: white;" text="Протоколы           " wrapText="true">
+            <Button alignment="CENTER" contentDisplay="TOP" graphicTextGap="8.0" layoutX="51.0" layoutY="338.0" mnemonicParsing="false" prefHeight="65.0" prefWidth="160.0" style="-fx-border-color: white; -fx-background-color: white;" text="Протоколы           " wrapText="true">
                <font>
                   <Font name="Calibri" size="18.0" />
                </font>
@@ -71,6 +77,11 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
+            <ImageView fitHeight="47.0" fitWidth="47.0" layoutX="14.0" layoutY="52.0">
+               <image>
+                  <Image url="@../images/icons/home_(2).png" />
+               </image>
+            </ImageView>
          </children>
          <opaqueInsets>
             <Insets />
@@ -79,7 +90,7 @@
             <DropShadow height="0.0" radius="1.7000000000000002" width="8.8" />
          </effect>
       </AnchorPane>
-      <AnchorPane prefHeight="67.0" prefWidth="1280.0" style="-fx-background-color: white;">
+      <AnchorPane fx:id="top_pane" prefHeight="67.0" prefWidth="1280.0" style="-fx-background-color: white;">
          <effect>
             <DropShadow radius="13.665" width="35.66" />
          </effect>
@@ -113,7 +124,7 @@
             </Label>
          </children>
       </AnchorPane>
-      <AnchorPane id="firstAnch" fx:id="firstAnch" layoutX="212.0" layoutY="67.0" prefHeight="653.0" prefWidth="1068.0">
+      <AnchorPane id="firstAnch" fx:id="center_pane" layoutX="212.0" layoutY="67.0" prefHeight="653.0" prefWidth="1068.0">
          <children>
             <AnchorPane fx:id="secAnch" prefHeight="653.0" prefWidth="840.0">
                <children>
@@ -121,16 +132,97 @@
                   <Label layoutX="104.0" layoutY="143.0" prefHeight="39.0" prefWidth="192.0" text="111111111111111" />
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="firstAnch" layoutY="18.0" prefHeight="653.0" prefWidth="1068.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <AnchorPane fx:id="run_anch" layoutY="18.0" prefHeight="653.0" prefWidth="1068.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
                   <Pane layoutY="33.0" prefHeight="620.0" prefWidth="1068.0" style="-fx-background-color: #f4f4f4;">
                      <children>
-                        <TableView layoutX="27.0" layoutY="89.0" prefHeight="339.0" prefWidth="1000.0" stylesheets="@table.css">
-                          <columns>
-                            <TableColumn prefWidth="192.0" text="Название" />
-                            <TableColumn prefWidth="179.0" text="Место" />
-                          </columns>
-                        </TableView>
+                        <GridPane layoutX="1.0" layoutY="4.0" prefHeight="514.0" prefWidth="1065.0">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints maxHeight="109.93338623046876" minHeight="10.0" prefHeight="12.866674804687506" vgrow="SOMETIMES" />
+                            <RowConstraints maxHeight="387.7333129882812" minHeight="10.0" prefHeight="387.7333129882812" vgrow="SOMETIMES" />
+                            <RowConstraints maxHeight="174.00000610351566" minHeight="10.0" prefHeight="15.066687011718784" vgrow="SOMETIMES" />
+                             <RowConstraints maxHeight="174.00000610351566" minHeight="10.0" prefHeight="15.066687011718784" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                           <children>
+                              <GridPane>
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <GridPane>
+                                      <columnConstraints>
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                      </columnConstraints>
+                                      <rowConstraints>
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                      </rowConstraints>
+                                       <children>
+                                          <TextArea prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" />
+                                          <Label prefHeight="18.0" prefWidth="127.0" text="Найти забег:" GridPane.halignment="RIGHT" GridPane.valignment="CENTER" />
+                                       </children>
+                                    </GridPane>
+                                    <GridPane GridPane.columnIndex="1">
+                                       <columnConstraints>
+                                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                       </columnConstraints>
+                                       <rowConstraints>
+                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                       </rowConstraints>
+                                       <children>
+                                          <TextArea prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" />
+                                          <Label prefHeight="18.0" prefWidth="114.0" text="Поиск участников:" GridPane.halignment="RIGHT" GridPane.valignment="CENTER" />
+                                       </children>
+                                    </GridPane>
+                                 </children>
+                              </GridPane>
+                              <GridPane GridPane.rowIndex="3">
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <Button mnemonicParsing="false" text="Редактировать забег" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                                    <Button mnemonicParsing="false" text="Присвоить чип" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                                 </children>
+                              </GridPane>
+                              <TableView prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+                                <columns>
+                                  <TableColumn prefWidth="75.0" text="C1" />
+                                  <TableColumn prefWidth="75.0" text="C2" />
+                                </columns>
+                              </TableView>
+                              <GridPane GridPane.rowIndex="2">
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="256.3333435058594" minWidth="0.0" prefWidth="37.73332214355469" />
+                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="645.2" minWidth="0.0" prefWidth="41.466677856445315" />
+                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="818.6" minWidth="10.0" prefWidth="108.40004272460936" />
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="867.9332885742188" minWidth="10.0" prefWidth="861.5332946777344" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <Button mnemonicParsing="false" text="+" />
+                                    <Button mnemonicParsing="false" text="-" GridPane.columnIndex="1" />
+                                    <Button mnemonicParsing="false" text="Button" GridPane.columnIndex="2" />
+                                    <Button mnemonicParsing="false" text="Загрузить из файла" GridPane.columnIndex="3" />
+                                 </children>
+                              </GridPane>
+                           </children>
+
+                        </GridPane>
                      </children>
                   </Pane>
                </children>
