--- a/src/main/resources/view/StartPage.fxml
+++ b/src/main/resources/view/StartPage.fxml
@@ -16,7 +16,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: ECF1FE;" stylesheets="@table.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lifehouse.raceth.gui.StartPageController">
    <children>
-      <AnchorPane prefHeight="67.0" prefWidth="1280.0" style="-fx-background-color: white;">
+      <AnchorPane prefHeight="78.0" prefWidth="1280.0" style="-fx-background-color: white;">
          <effect>
             <DropShadow radius="13.665" width="35.66" />
          </effect>
@@ -43,7 +43,7 @@
                </textFill>
                <graphic>
                   <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
-                     <Image url="@images/icons/more%20(1).png"/>
+                     <Image url="@images/icons/more%20(1).png" />
                   </ImageView>
                </graphic>
             </Label>
@@ -55,7 +55,7 @@
             <ComboBox fx:id="ActiveComp" layoutX="1075.0" layoutY="22.0" minWidth="150.0" />
          </children>
       </AnchorPane>
-      <AnchorPane layoutY="110.0" prefHeight="610.0" prefWidth="214.0" style="-fx-background-color: white;">
+      <AnchorPane layoutY="110.0" prefHeight="610.0" prefWidth="212.0" style="-fx-background-color: white;">
          <children>
             <Button fx:id="sorevButt" alignment="CENTER" graphicTextGap="8.0" layoutX="-1.0" layoutY="42.0" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="77.0" prefWidth="214.0" style="-fx-border-color: white; -fx-background-color: white;" text="Соревнование     " wrapText="true">
                <font>
@@ -69,7 +69,7 @@
                </cursor>
                <graphic>
                   <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
-                     <Image url="@images/icons/home%20(2).png"/>
+                     <Image url="@images/icons/home%20(2).png" />
                   </ImageView>
                </graphic>
             </Button>
@@ -124,7 +124,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button alignment="CENTER" graphicTextGap="8.0" layoutX="-1.0" layoutY="338.0" mnemonicParsing="false" prefHeight="77.0" prefWidth="214.0" style="-fx-border-color: white; -fx-background-color: white;" text="Протоколы           " wrapText="true">
+            <Button fx:id="protocol" alignment="CENTER" graphicTextGap="8.0" layoutX="-1.0" layoutY="338.0" mnemonicParsing="false" onAction="#handleButtonAction3" prefHeight="77.0" prefWidth="214.0" style="-fx-border-color: white; -fx-background-color: white;" text="Протоколы           " wrapText="true">
                <font>
                   <Font name="Calibri" size="18.0" />
                </font>
@@ -150,10 +150,11 @@
             <DropShadow height="0.0" radius="1.7000000000000002" width="8.8" />
          </effect>
       </AnchorPane>
-      <AnchorPane id="firstAnch" fx:id="firstAnch" layoutX="212.0" layoutY="110.0" prefHeight="610.0" prefWidth="1068.0">
+      <AnchorPane id="firstAnch" fx:id="firstAnch" layoutX="212.0" layoutY="110.0" prefHeight="610.0" prefWidth="1061.0">
          <children>
             <fx:include fx:id="competition_page" maxHeight="-Infinity" maxWidth="-Infinity" source="CompetitionPage.fxml" />
             <fx:include fx:id="run_page" maxHeight="-Infinity" maxWidth="-Infinity" source="RunPage.fxml" />
+            <fx:include fx:id="protocol_page" maxHeight="-Infinity" maxWidth="-Infinity" source="ProtocolPage.fxml" />
          </children>
       </AnchorPane>
    </children>
