fix design on run page

--- a/src/main/resources/view/StartPage.fxml
+++ b/src/main/resources/view/StartPage.fxml
@@ -16,9 +16,12 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: ECF1FE;" stylesheets="@table.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lifehouse.raceth.gui.StartPageController">
    <children>
-      <AnchorPane prefHeight="67.0" prefWidth="1280.0" style="-fx-background-color: white;">
+      <AnchorPane prefHeight="67.0" prefWidth="1280.0" style="-fx-background-color: #FAFAFA;">
          <effect>
-            <DropShadow radius="13.665" width="35.66" />
+            <DropShadow height="7.0" offsetY="2.0" radius="10.165" width="35.66">
+               <color>
+                  <Color opacity="0.25" />
+               </color></DropShadow>
          </effect>
          <children>
             <Label layoutX="39.0" layoutY="12.0" text="RaceTH">
@@ -43,7 +46,7 @@
                </textFill>
                <graphic>
                   <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
-                     <Image url="@images/icons/more%20(1).png"/>
+                     <Image url="@images/icons/more%20(1).png" />
                   </ImageView>
                </graphic>
             </Label>
@@ -55,7 +58,7 @@
             <ComboBox fx:id="ActiveComp" layoutX="1075.0" layoutY="22.0" minWidth="150.0" />
          </children>
       </AnchorPane>
-      <AnchorPane layoutY="110.0" prefHeight="610.0" prefWidth="214.0" style="-fx-background-color: white;">
+      <AnchorPane layoutY="110.0" prefHeight="610.0" prefWidth="214.0" style="-fx-background-color: #FAFAFA;">
          <children>
             <Button fx:id="sorevButt" alignment="CENTER" graphicTextGap="8.0" layoutX="-1.0" layoutY="42.0" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="77.0" prefWidth="214.0" style="-fx-border-color: white; -fx-background-color: white;" text="Соревнование     " wrapText="true">
                <font>
@@ -69,7 +72,7 @@
                </cursor>
                <graphic>
                   <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
-                     <Image url="@images/icons/home%20(2).png"/>
+                     <Image url="@images/icons/home%20(2).png" />
                   </ImageView>
                </graphic>
             </Button>
@@ -147,7 +150,10 @@
             <Insets />
          </opaqueInsets>
          <effect>
-            <DropShadow height="0.0" radius="1.7000000000000002" width="8.8" />
+            <DropShadow height="12.5" offsetY="2.0" radius="2.625" width="0.0">
+               <color>
+                  <Color opacity="0.25" />
+               </color></DropShadow>
          </effect>
       </AnchorPane>
       <AnchorPane id="firstAnch" fx:id="firstAnch" layoutX="212.0" layoutY="110.0" prefHeight="610.0" prefWidth="1068.0">
