--- a/src/main/resources/view/table.css
+++ b/src/main/resources/view/table.css
@@ -3,10 +3,11 @@
 }
 
 .table-view .column-header-background{
-    -fx-background-color: white;
+    -fx-background-color: transparent;
     -fx-background-radius: 7px 7px 0px 0px;
     -fx-background-insets: 0 11px 0 0;
-    -fx-padding: 0 0 5px 0;
+    -fx-padding: 10px 0 5px 0;
+    -fx-border-style: solid none; -fx-border-width: 0.2; -fx-border-color: black;
 }
 .table-view .column-header {
     -fx-background-color: transparent;
