--- a/src/main/resources/view/CompetitionPage.fxml
+++ b/src/main/resources/view/CompetitionPage.fxml
@@ -15,7 +15,7 @@
 
 <AnchorPane fx:id="main_pane" prefHeight="610.0" prefWidth="1068.0" style="-fx-background-color: ECF1FE;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lifehouse.raceth.gui.CompetitionPageController">
    <children>
-      <GridPane prefHeight="76.0" prefWidth="1130.0">
+      <GridPane prefHeight="76.0" prefWidth="1076.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="675.2" minWidth="0.0" prefWidth="217.59998779296876" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="824.0" minWidth="10.0" prefWidth="518.4000122070313" />
@@ -36,7 +36,7 @@
             <TextField maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="26.0" prefWidth="309.0" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
          </children>
       </GridPane>
-      <GridPane layoutY="103.0" prefHeight="344.0" prefWidth="1129.0">
+      <GridPane layoutY="103.0" prefHeight="344.0" prefWidth="1076.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
@@ -44,7 +44,7 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <TableView minWidth="-Infinity" prefHeight="200.0" prefWidth="1112.0">
+            <TableView maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="344.0" prefWidth="1076.0">
               <columns>
                 <TableColumn prefWidth="200.0" text="Название" />
                 <TableColumn prefWidth="200.0" text="Место" />
@@ -64,6 +64,6 @@
         </rowConstraints>
       </GridPane>
       <Label layoutX="464.0" layoutY="229.0" text="Competition" />
-      <ScrollBar layoutX="1128.0" orientation="VERTICAL" prefHeight="610.0" prefWidth="22.0" />
+      <ScrollBar layoutX="1113.0" orientation="VERTICAL" prefHeight="610.0" prefWidth="22.0" />
    </children>
 </AnchorPane>
